# RAG-with_search_functions

./: .coverage  .env  .env.example  .gitignore  DOCUMENT_SOURCES.md  FEATURE_SUMMARY.md  README.md  TESTING_SUMMARY.md  TEST_FIXES_NEEDED.md  TEST_STATUS_SUMMARY.md  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_rag.py
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: analytics.json  cost_log.json
data/chroma_db/: chroma.sqlite3
example_documents/: sample_document.txt
src/: __init__.py
src/generation/: __init__.py  agent.py  answer_generator.py  generate.py  tools.py
src/ingestion/: __init__.py  article_downloader.py  article_loader.py  chunker.py  docling_processor.py  google_search.py  local_document_loader.py  pdf_loader.py  source_filter.py  source_summarizer.py  text_loader.py  web_search.py  yt_bot.py
src/search/: search_agent.py  search_tools.py
src/utils/: __init__.py  cli_display.py  cost_tracker.py  data_persistence.py  logging_config.py
src/vectorstore/: __init__.py  chroma_store.py  embeddings.py  parallel_embedding.py
tests/: README.md  conftest.py
tests/integration/: test_rag_pipeline.py
tests/unit/generation/: test_agent.py  test_answer_generator.py  test_tools.py
tests/unit/ingestion/: test_article_downloader.py  test_chunker.py  test_pdf_loader.py  test_text_loader.py  test_yt_bot.py
tests/unit/utils/: test_cost_tracker.py
tests/unit/vectorstore/: test_chroma_store.py  test_embeddings.py
