[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.77.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.1",
    "faiss-cpu>=1.13.2",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "gradio>=6.5.1",
    "huggingface-hub>=1.3.5",
    "ibm-watsonx-ai>=1.5.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-ibm>=1.0.2",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "modal>=1.3.1",
    "ollama>=0.6.1",
    "openai>=2.16.0",
    "plotly>=6.5.2",
    "protobuf==3.20.2",
    "psutil>=7.2.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.14",
    "sentence-transformers>=5.2.2",
    "speedtest-cli>=2.1.3",
    "tavily>=1.1.0",
    "torch==2.2.2",
    "wandb>=0.24.1",
    "youtube-transcript-api>=1.2.4",
]
