[project]
name = "rag-with_search"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.77.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.1",
    "docling>=2.0.0",
    "faiss-cpu>=1.13.2",
    "feedparser>=6.0.12",
    "google-api-python-client>=2.188.0",
    "google-generativeai>=0.8.6",
    "googlesearch-python>=1.3.0",
    "gradio>=6.5.1",
    "huggingface-hub>=1.3.5",
    "ibm-watsonx-ai>=1.5.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-ibm>=1.0.2",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "modal>=1.3.1",
    "ollama>=0.6.1",
    "openai>=2.16.0",
    "pdfplumber>=0.11.9",
    "plotly>=6.5.2",
    "protobuf==3.20.2",
    "psutil>=7.2.2",
    "pydub>=0.25.1",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "ray[default]>=2.48.0",
    "requests>=2.32.5",
    "ruff>=0.14.14",
    "speedtest-cli>=2.1.3",
    "tavily>=1.1.0",
    "wandb>=0.24.1",
    "youtube-transcript-api>=1.2.4",
]
